# mslibos

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  build_user.rs  build_wasm.rs  config.json  cp_data.sh  create_image.sh  justfile
.github/: dependabot.yml
.github/workflows/: dependabot.yml  main.yml  rust.yml
as_hostcall/: Cargo.toml
as_hostcall/src/: err.rs  fatfs.rs  fdtab.rs  mpk.rs  signal.rs
as_std/: Cargo.toml
as_std/src/: agent.rs  fs.rs  heap_alloc.rs  init_context.rs  io.rs  lib.rs  mm.rs  mpk.rs  net.rs  prelude.rs  sym_patch.rs  sync.rs
as_std_proc_macro/: Cargo.toml
baseline/db_agent/: Cargo.toml
baseline/db_agent/src/: lib.rs  main.rs  memcache.rs  mongodb.rs
baseline/infer_mnist/: Cargo.toml
baseline/infer_mnist/src/: main.rs
bins/asvisor/: Cargo.toml
bins/asvisor-d/: Cargo.toml
bins/asvisor-d/src/: main.rs
bins/asvisor/src/: main.rs
bins/msvisor/: Cargo.toml
bins/msvisor-d/: Cargo.toml
bins/msvisor-d/src/: main.rs
bins/msvisor/src/: main.rs
common_service/fatfs/: Cargo.toml
common_service/fatfs/src/: apis.rs  drop_fs.rs  lib.rs
common_service/fdtab/: Cargo.toml
common_service/fdtab/src/: apis.rs  lib.rs
common_service/mm/: Cargo.toml
common_service/mm/src/: faas_buffer.rs  lib.rs  mmap.rs
common_service/mm/src/faas_buffer/: apis.rs  mod.rs
common_service/mmap_file_backend/: Cargo.toml
common_service/mmap_file_backend/src/: apis.rs  lib.rs
common_service/ruxfdtab/: Cargo.toml
common_service/ruxfdtab/src/: as_apis.rs  ctypes_gen.rs  fd_ops.rs  fs.rs  lib.rs  stdio.rs
common_service/signal/: Cargo.toml
common_service/signal/src/: lib.rs
common_service/socket/: Cargo.toml
common_service/socket/src/: apis.rs  drop_tap.rs  lib.rs  logs.rs  setup_tap.rs
fs_images/: fatfs.img
gen-file/: Cargo.toml
image_content/: input.txt  lines.txt  little_fake_data_0.txt  little_fake_data_1.txt  little_fake_data_2.txt  little_fake_data_3.txt  little_fake_data_4.txt  reducer_1.txt  reducer_2.txt  sort_data_0.txt  sort_data_1.txt  sort_data_2.txt  sort_data_3.txt  sort_data_4.txt  sort_data_5.txt
isol_config/: base_config.json  disable_libos.json  httpd.json  load_all.json  long_chain.json  long_chain_c1.json  long_chain_c3.json  long_chain_c5.json  long_chain_load_all.json  long_chain_n10.json  long_chain_n15.json  long_chain_n5.json  map_reduce.json  map_reduce_large.json  map_reduce_large_c1.json  map_reduce_large_c1_ramfs.json  map_reduce_large_c3.json  map_reduce_large_c3_ramfs.json  map_reduce_large_c5.json  map_reduce_large_c5_ramfs.json  map_reduce_load_all.json  measure_mem_10.json  measure_mem_2.json  measure_mem_5.json  media_service.json  media_service_no_libos.json  mmap_file.json  multi_apps.json  never_stop.json  nn_mnist.json  panic.json  parallel_sort.json  parallel_sort_c1.json  parallel_sort_c1_ramfs.json  parallel_sort_c3.json  parallel_sort_c3_ramfs.json  parallel_sort_c5.json  parallel_sort_c5_ramfs.json  parallel_sort_load_all.json  pass_complex_args.json  (+46 more)
libasvisor/: Cargo.toml
libasvisor/src/: hostcalls.rs  logger.rs  metric.rs  mpk.rs  utils.rs
libasvisor/src/isolation/: config.rs  handler.rs  mod.rs
libasvisor/src/service/: elf_service.rs  loader.rs  mod.rs  rust_service.rs
libasvisor/tests/: faasflow_test.rs  file_test.rs  network_test.rs  run_dylib_test.rs  should_panic.rs  wasm_test.rs
libmsvisor/: Cargo.toml  build.rs
libmsvisor/src/: hostcalls.rs  lib.rs  metric.rs  mpk.rs  utils.rs
libmsvisor/src/isolation/: config.rs  handler.rs  mod.rs
libmsvisor/src/service/: elf_service.rs  loader.rs  mod.rs  rust_service.rs
libmsvisor/tests/: faasflow_test.rs  file_test.rs  long_chain_test.rs  network_test.rs  run_dylib_test.rs  should_panic.rs  wasm_test.rs
ms_hostcall/: Cargo.toml
ms_hostcall/src/: err.rs  fatfs.rs  fdtab.rs  lib.rs  mm.rs  mmap_file_backend.rs  socket.rs  types.rs
ms_std/: Cargo.toml
ms_std/src/: agent.rs  args.rs  console.rs  fs.rs  heap_alloc.rs  init_context.rs  io.rs  lib.rs  libos.rs  mm.rs  mpk.rs  net.rs  prelude.rs  sym_patch.rs  time.rs
ms_std/src/libos/: mod.rs  utils.rs
ms_std_proc_macro/: Cargo.toml
msvisor/: Cargo.toml  build.rs
msvisor/src/: hostcalls.rs  isolation.rs  lib.rs  logger.rs  main.rs  metric.rs  service.rs  utils.rs
msvisor/src/isolation/: config.rs  handler.rs  isolation.rs  mod.rs
msvisor/src/service/: elf_service.rs  loader.rs  mod.rs  rust_service.rs
msvisor/tests/: faasflow_test.rs  file_test.rs  network_test.rs  run_dylib_test.rs  should_panic.rs
scripts/: build.sh  build_all_common.sh  build_all_common_mpk.sh  build_common.sh  build_common_mpk.sh  build_user.sh  build_user_mpk.sh  check_mods.sh  check_user.sh  clean_all.sh  comp_resource.py  del_tap.sh  draw_rate.py  gen_data.py  long_chain_parallel.py  make_fs_img.sh  make_tap.sh  map_reduce_parallel.py  python_cold_start.sh  python_data_trans.sh  python_end_to_end.sh  python_wordcount_trash.sh  run_media_service.sh  run_media_service_no_libos.sh  run_tests.sh  run_tests_mpk.sh  run_tests_nodefault.sh  run_wasm_tests.sh  rust_cold_start.sh  rust_data_trans.sh  rust_end_to_end.sh  set_uffd_acl.sh  wasmtime_data_trans.sh  wasmtime_end_to_end.sh
tracing_and_charming/: Cargo.toml
tracing_and_charming/src/: __charming_media_service_multi_apps.rs  charming_media_service.rs  lib.rs  test.py  tracing_media_service.rs  tracing_media_service_no_libos.rs
user/: data_size.config  function_chain_data_size.config
user/file_reader/: Cargo.toml
user/file_reader/src/: lib.rs
user/func_a/: Cargo.toml
user/func_a/src/: lib.rs
user/httpd/: Cargo.toml
user/httpd/src/: lib.rs
user/load_all/: Cargo.toml
user/load_all/src/: lib.rs
user/mapper/: Cargo.toml
user/mapper/src/: lib.rs
user/mmap_file/: Cargo.toml
user/mmap_file/src/: lib.rs
user/mr_upload_text/: Cargo.toml
user/mr_upload_text/src/: lib.rs
wasi_api/: Cargo.toml
wasi_api/src/: data_buffer.rs  lib.rs  wasi.rs
wasmtime_wasi_api/: Cargo.toml
wasmtime_wasi_api/src/: capis.rs  data_buffer.rs  errno.rs  lib.rs  types.rs  wasi.rs
(+375 files in other folders)
