# cargo-features = ["profile-rustflags"]

[workspace]
members = ["msvisor", "gen-file", "ms_hostcall", "ms_std", "ms_std_proc_macro"]
exclude = ["user/", "common_service/"]
default-members = ["msvisor"]
resolver = "2"

[workspace.dependencies]
msvisor = { path = "msvisor" }

ms_hostcall = { path = "ms_hostcall" }
ms_std = { path = "ms_std" }
