# cargo-features = ["profile-rustflags"]

[workspace]
members = ["bins/*", "libmsvisor", "ms_hostcall", "ms_std_proc_macro", "ms_std"]

# The reason for excluding "user/" is obvious. This workspace can be regarded as 
# a toolchain of libos. But "user/" are users' function. 
# 
# The reason for excluding "common_service/" is relate to feature gates of ms_std. 
# In current implementation, ms_std has conflict features (e.g. `panic_def` and 
# `unwinding`). Of course, if add "user/" to members, will also have problem of 
# feature gate. 
exclude = ["user/", "common_service/", "baseline/"]
default-members = ["bins/msvisor"]
resolver = "2"

[workspace.dependencies]
libmsvisor = { path = "libmsvisor", default-features = false, features = [
    # "enable_mpk",
] }

ms_hostcall = { path = "ms_hostcall" }
ms_std = { path = "ms_std" }
