[package]
name = "ms_hostcall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[dependencies]
smoltcp.workspace = true
url.workspace = true

thiserror = "*"
derive_more = "*"
managed = { version = "0.8", default-features = false, features = ["map"] }
defmt = { version = "0.3", optional = true }
libc = { version = "0.2.18", optional = true }
