[package]
name = "ms_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[features]
panic_def = []
alloc_def = []

[dependencies]
ms_hostcall = { workspace = true, features = [
    "socket",
    "fdtab",
    "fatfs",
    "mm",
] }
ms_std_proc_macro = { path = "../ms_std_proc_macro" }

# buddy_system_allocator = "0.9"
unwinding = { version = "=0.2.0", features = [
    "panic-handler",
    "personality",
], optional = true }
cfg-if = "1.0.0"
linked_list_allocator = "0.10.5"
spin = "0.9.8"
thiserror-no-std = "2.0.2"
