[package]
name = "msvisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
toml = "0.7.4"

[dependencies]
libloading = "*"
anyhow = "*"
lazy_static = "*"
ms_hostcall = { workspace = true }
log = "*"
env_logger = "*"
xmas-elf = "*"                                   # use to parse dynlib elf file.
nix = "*"                                        # use to call mmap, pthread_exit.
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = { version = "*", features = ["derive"] }
