[package]
name = "msvisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lazy_static = "1.4.0"

[dependencies]
ms_hostcall = { workspace = true }

libloading = "0.8.0"
anyhow = "1.0.71"
lazy_static = "1.4.0"
log = "0.4.19"
env_logger = "0.10.0"
xmas-elf = "0.9.0"                                     # use to parse dynlib elf file.
nix = "0.26.2"                                         # use to call mmap, pthread_exit.
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
clap = { version = "4.3.11", features = ["derive"] }
