[package]
name = "wasi_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ms_std = { path = "../ms_std", default-features = false }
ms_hostcall = { path = "../ms_hostcall", default-features = false }
ms_std_proc_macro = { path = "../ms_std_proc_macro" }
# unwinding = { version = "=0.2.0", features = ["panic-handler", "personality"] }
spin = "0.9.8"
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

tinywasm = { git = "https://github.com/anti-entropy123/tinywasm", branch = "master", default-features = false, features = [
   "parser",
] }
# tinywasm = { path = "/home/dyx/workplace/mslibos/tinywasm", default-features = false, features = [
# tinywasm = { path = "/home/yjn/rust_project/tinywasm-lym", default-features = false, features = [
#    "parser",
# ] }

[features]
log = []

default = ["log"]
