[package]
name = "wasmtime_wasi_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ms_std = { path = "../ms_std", default-features = false }
ms_hostcall = { path = "../ms_hostcall", default-features = false }
ms_std_proc_macro = { path = "../ms_std_proc_macro" }

wasmtime = { version = "=21.0.0", default-features = false, features = [
    "runtime",
    "gc",
    "component-model",
] }

[features]
log = []

# default = ["log"]
