[package]
name = "wasmtime_wasi_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ms_std = { path = "../ms_std", default-features = false, features = [
    "refer-based",
] }
ms_hostcall = { path = "../ms_hostcall", default-features = false, features = [
    "signal",
] }
ms_std_proc_macro = { path = "../ms_std_proc_macro" }
spin = "0.9.8"
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
sjlj = { version = "0.1.3" }

# wasmtime = { path = "../wasmtime-as-lib", default-features = false, features = [
wasmtime = { git = "https://gitee.com/tju-cloud-computing/wasmtime-as-lib", branch = "master", default-features = false, features = [
    "runtime",
    "gc",
    "component-model",
] }

[features]
log = []

# default = ["log"]
