[package]
name = "db_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
axum = "0.7.4"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.1", features = ["trace"] }
log = "0.4"

serde = { version = "1.0" }
serde_json = { version = "1.0", default-features = false }

memcache = "0.17.1"
mongodb = { version = "2.8.0", features = [] }
