[package]
name = "msvisor-d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libasvisor = { workspace = true, default-features = false, features = [] }

log = "0.4.20"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.188" }
anyhow = { version = "1.0.75" }

[features]
namespace = ["libasvisor/namespace"]

default = ["namespace"]
