[package]
name = "msvisor-d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmsvisor = { workspace = true }

log = "0.4.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.188" }
anyhow = { version = "1.0.75" }
