[package]
name = "fatfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[dependencies]
ms_std = { path = "../../ms_std", features = [] }
ms_hostcall = { path = "../../ms_hostcall" }
fatfs = "0.3.6"
fscommon = "0.1.1"
lazy_static = "1.4.0"
