[package]
name = "fatfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[dependencies]
as_std = { path = "../../as_std", features = [] }
as_hostcall = { path = "../../as_hostcall", features = ["fatfs"] }

fatfs = "0.3.6"
fscommon = "0.1.1"

[features]
mpk = ["as_std/mpk"]
default = []