[package]
name = "fdtab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
ms_std = { path = "../../ms_std", features = ["alloc_def", "unwinding"] }
ms_hostcall = { path = "../../ms_hostcall", features = [
    "fatfs",
    "socket",
    "fdtab",
] }

spin = "0.9.8"

[features]
mpk = ["ms_std/mpk"]
default = []