[package]
name = "fdtab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
as_std = { path = "../../as_std", features = ["alloc_def", "unwinding"] }
as_hostcall = { path = "../../as_hostcall", features = [
    "fatfs",
    "socket",
    "fdtab",
] }

spin = "0.9.8"

[features]
mpk = ["as_std/mpk"]
default = []