[package]
name = "mmap_file_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
ms_std = { path = "../../ms_std" }
ms_hostcall = { path = "../../ms_hostcall" }

nix = { version = "0.27.1", features = ["poll", "signal", "fs"] }
userfaultfd = { version = "0.7.0", features = [] }
lazy_static = "1.4.0"
