[package]
name = "ruxfdtab"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]


[dependencies]
as_std = { path = "../../as_std" }
as_hostcall = { path = "../../as_hostcall", features = ["fatfs"] }

axerrno = { git = "https://github.com/anti-entropy123/ruxos/" }
# axerrno = { path = "/home/yjn/rust_project/ruxos/crates/axerrno" }

axio = { git = "https://github.com/anti-entropy123/ruxos/" }
# axio = { path = "/home/yjn/rust_project/ruxos/crates/axio" }

ruxfdtable = { git = "https://github.com/anti-entropy123/ruxos/" }
# ruxfdtable = { path = "/home/yjn/rust_project/ruxos/modules/ruxfdtable" }

ruxfs = { git = "https://github.com/anti-entropy123/ruxos/", features = [] }
# ruxfs = { path = "/home/yjn/rust_project/ruxos/modules/ruxfs", features = [] }
ruxdriver = { git = "https://github.com/anti-entropy123/ruxos/", features = [
    "ramdisk",
], optional = true }
# ruxdriver = { path = "/home/yjn/rust_project/ruxos/modules/ruxdriver", features = [
#     "ramdisk",
# ], optional = true }

spin = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[features]
mpk = ["as_std/mpk"]
use-ramdisk = ["ruxfs/use-ramdisk", "ruxfs/full", "ruxdriver"]
log = []

default = ["use-ramdisk"]
