[package]
name = "socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
# ms_std = {  path = "../../ms_std", default-features = false }
ms_hostcall.workspace = true

lazy_static = "1.4.0"
managed = { version = "0.8", default-features = false, features = ["map"] }
defmt = { version = "0.3", optional = true }
libc = { version = "0.2.138", optional = true }
rand = "*"
smoltcp = { version = "0.9.1", default-features = false, features = [
    "log",
    "std",
    "medium-ethernet",
    "medium-ip",
    "phy-tuntap_interface",
    "proto-ipv4",
    "socket-tcp",
    "socket-dns",
] }
