[package]
name = "httpd"
version = "0.1.0"
edition = "2021"
build = "../../build_user.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
as_std = { path = "../../as_std", features = ["unwinding", "alloc_def"] }

[features]
mpk = ["as_std/mpk"]
default = []