[package]
name = "load_all"
version = "0.1.0"
edition = "2021"
build = "../../build_user.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[dependencies]
ms_std = { path = "../../ms_std", features = [
    "alloc_def",
    "panic_def",
], optional = true }
ms_hostcall = { path = "../../ms_hostcall", optional = true }
cfg-if = "1.0.0"

[features]
with_libos = ["ms_std", "ms_hostcall"]
measure_mem = ["with_libos"]
mpk = ["ms_std/mpk"]
default = ["measure_mem"]
