[package]
name = "mapper"
version = "0.1.0"
edition = "2021"
build = "../../build_user.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[dependencies]
ms_std = { path = "../../ms_std", features = ["alloc_def", "unwinding"] }
ms_hostcall = { path = "../../ms_hostcall" }
ms_std_proc_macro = { path = "../../ms_std_proc_macro" }

hashbrown = { version = "=0.14.3", default-features = false, features = [
    "ahash",
    "serde",
] }
heapless = { version = "0.8.0", default-features = false }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }

[features]
mpk = ["ms_std/mpk"]
pkey_per_func = ["mpk"]
default = []
